fix: Adjust spacing with mobile

--- a/components/Lightbox.module.scss
+++ b/components/Lightbox.module.scss
@@ -49,6 +49,7 @@
       position: fixed;
       top: 60px;
       left: 20px;
+      margin-top: 0;
 
       width: calc(100% - 40px);
       height: calc(100% - 90px);
